--- a/app/views/whispers/index.html.erb
+++ b/app/views/whispers/index.html.erb
@@ -14,7 +14,7 @@
         </div>
     </div>
     
-<%=link_to(new_whisper_path) do %>
+<%=link_to(edit_whisper_path(whisper.id)) do %>
     <button class="btn btn-secondary btn-lg" >edit</button>
  <%end%>  
  <%=link_to(whisper_path(whisper.id), method: :delete, data: {confirm:'really?'}) do %>
