--- a/app/views/whispers/new.html.erb
+++ b/app/views/whispers/new.html.erb
@@ -1,7 +1,2 @@
 <h2>Everything starts from your whisper</h2>
-<%= form_with(model: @whisper, local: true) do |form| %>
-    <div class = "whisper_content">
-    <%= form.text_field :content%>
-    </div>
-    <%= form.submit "whisper"%>
-<% end %>
+<%= render 'form'%>
