つぶやき投稿確認画面

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
 
   <body>
   <header>
-    <img src = 'assets/hed3.jpg'>
+    <img src = '/hed3.jpg'>
   </header>
     <%= yield %>
   </body>
   <footer>
-    <img src = 'assets/foot.jpg'>
+    <img src = '/foot.jpg'>
   </footer>
 </html>
