--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,7 @@
+*{
+  margin:0;
+  padding:0;
+  }
 
 .hiyoko_whisper {
     width: 100%;
@@ -44,6 +48,31 @@
   .says p {
     margin: 0;
     padding: 0;
+  }
+  
+  .wrapper{
+    min-height: 100vh;
+    position: relative;/*←相対位置*/
+    padding-bottom: 210px;/*←footerの高さ*/
+    box-sizing: border-box;/*←全て含めてmin-height:100vhに*/
+  }
+
+  .main_body{
+    padding: 10px;
+  }
+
+  .hed_all{
+    margin: 0;
+  }
+  .img_hed {
+    width : 100vw ;
+  }
+
+  .img_foot {
+    width : 100vw ;
+    position: absolute;
+    bottom: 0; /*下に固定*/
+ 
   }
 
 /*
